--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
             - name: lint with flake8
               run: |
                 pip install flake8
-                flake8 .
+                flake8 --ignore E501.
 
             - name: run tests
               run: |
