--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,10 @@ jobs:
               run: |
                 python -m pip install --upgrade pip
                 pip install -r requirements.txt
+                pip install flake8
 
             - name: lint with flake8
-              run: |
-                pip install flake8
-                flake8 --ignore E501.
+              run: flake8 --ignore=E501,W292
 
             - name: run tests
               run: |
