lint flake8 remediations

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
                 pip install flake8
 
             - name: lint with flake8
-              run: flake8 --ignore=E501,W292
+              run: flake8 --ignore=E501,W292,W293
 
             - name: run tests
               run: |
