tests: convert unit tests to pytest-style; add pytest-asyncio

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -18,3 +18,9 @@ logging:
     - type: console
     - type: file
       filename: logs/app.log
+
+cache:
+  ttl_seconds: 30
+
+database:
+  weapons_db_path: "data/db/weapons.db"
