--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,28 @@
-name: CI/CD Pipeline
+name: CI
 
 on:
-    push:
-        branches: [main]
-    pull_request:
-        branches: [main]
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-
-        steps:
-            - name: checkout repo
-              uses: actions/checkout@v4
-
-            - name: setup python
-              uses: actions/setup-python@v5
-              with:
-                python-version: '3.8'
-
-            - name: Install dependencies
-              run: |
-                python -m pip install --upgrade pip
-                pip install -r requirements.txt
-                pip install flake8
-
-            - name: lint with flake8
-              run: flake8 --ignore=E501,W292,W293
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run tests
+        run: |
+          python -m unittest discover -v
+      - name: Lint (optional)
+        run: |
+          pip install flake8
+          flake8 --max-line-length=120
