--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.4'
-
 services:
   bot:
     image: accurateherbchecker
@@ -10,3 +8,7 @@ services:
       - DISCORD_BOT_TOKEN=${DISCORD_BOT_TOKEN}
     volumes:
       - .:/app
+      - ./logs:/app/logs
+      - ./data/db:/app/data/db
+    env_file:
+      - .env
