--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, FeatDeathMatch ]
   pull_request:
     branches: [ main ]
 
@@ -14,15 +14,16 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.12'
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python -m venv .venv
+          .venv/bin/python -m pip install --upgrade pip
+          .venv/bin/python -m pip install -r requirements.txt
       - name: Run tests
         run: |
-          python -m unittest discover -v
+          .venv/bin/python -m pytest -q
       - name: Lint (optional)
         run: |
-          pip install flake8
-          flake8 --max-line-length=120
+          .venv/bin/python -m pip install flake8
+          .venv/bin/python -m flake8 --max-line-length=120
